test/error/missing_endinterface_2.sv
// pattern: missing expected `endinterface`
interface foo;
module bar;
endmodule
